# CloudMatos-AI-Security-Engineer

./: .dockerignore  .gitignore  DEPLOY.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .gcloudignore  Dockerfile  requirements.txt
backend/app/: auth.py  database.py  init_db.py  main.py  models.py
backend/app/routers/: auth.py  logs.py  policy.py  query.py
backend/scripts/: README.md  create_test_admin.py
backend/tests/: test_logs_endpoint.py
docs/: architecture.md  threat-model.md
frontend/app/: layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/admin/login/: page.tsx
frontend/components/admin/: LogsFilters.tsx  LogsTable.tsx  PolicyEditor.tsx
frontend/components/demo/: PromptInput.tsx  ResponseDisplay.tsx  RiskIndicator.tsx
frontend/components/layout/: Footer.tsx  Header.tsx
frontend/components/ui/: Alert.tsx
scripts/: README.md
sdk/: .gitignore  README.md  pyproject.toml
sdk/examples/: 5_line_example.py  basic_usage.py
sdk/prompt_firewall_sdk/: __init__.py  client.py  exceptions.py
sdk/tests/: __init__.py  test_client.py
